# rust-dyn-proxy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
dynamic-proxy-macros/: Cargo.toml
dynamic-proxy-macros/src/: lib.rs
dynamic-proxy-types/: Cargo.toml
dynamic-proxy-types/src/: lib.rs
src/: lib.rs
tests/: compile_fail.rs  dynamic_test.rs
tests/ui/: borrowed_arg.rs  borrowed_arg.stderr  borrowed_return.rs  borrowed_return.stderr  non_identifier_arg.rs  non_identifier_arg.stderr  required_assoc_const.rs  required_assoc_const.stderr  required_assoc_type.rs  required_assoc_type.stderr
