[package]
name = "dynamic-proxy"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies.dynamic-proxy-types]
path = "dynamic-proxy-types"
version = "1.0.1"

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = {version= "2.0.57",features=["full","fold"]}
log = "0.4.21"
fern = "0.6"
humantime = "2.1.0"
