[package]
authors = ["Kamyar Inanloo <kamyar1979@gmail.com"]
description = "Build terminal user interfaces in Rust."
homepage = "https://github.com/kamyar1979/rust-dyn-proxy"
license = "BSD-3"
publish = true
repository = "https://github.com/kamyar1979/rust-dyn-proxy"

name = "dynamic-proxy"
version = "0.1.0"
edition = "2021"

[dependencies.dynamic-proxy-types]
path = "dynamic-proxy-types"
version = "0.1.0"


[dependencies.dynamic-proxy-macros]
path = "dynamic-proxy-macros"
version="0.1.0"

