[package]
authors = ["Kamyar Inanloo <kamyar1979@gmail.com"]
description = "Dynamic Proxy Implementation for Rust"
homepage = "https://github.com/kamyar1979/rust-dyn-proxy"
license = "Apache-2.0"
publish = true
repository = "https://github.com/kamyar1979/rust-dyn-proxy"
name = "dynamic-proxy"
version = "0.4.0"
edition = "2021"

[dependencies.dynamic-proxy-types]
path = "dynamic-proxy-types"
version = "0.4.0"


[dependencies.dynamic-proxy-macros]
path = "dynamic-proxy-macros"
version="0.1.0"

[dependencies]
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime