[package]
authors = ["Kamyar Inanloo <kamyar1979@gmail.com"]
description = "Dynamic Proxy Implementation for Rust - Types"
homepage = "https://github.com/kamyar1979/rust-dyn-proxy"
license = "Apache-2.0"
publish = true
repository = "https://github.com/kamyar1979/rust-dyn-proxy"
name = "dynamic-proxy-types"
version = "0.4.0"
edition = "2021"

[dependencies]
syn = "2.0.60"
